<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_gravity="center"
    tools:context=".Location.LocationFinder">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="right">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/whiteBlue"
        android:layout_gravity="center"
        android:textSize="20dp"
        android:layout_marginBottom="20dp"
        android:textStyle="bold"
        android:padding="5dp"
        android:fontFamily="@fonts/farroya.ttf"
        android:text="@string/name_app"
        android:background="@color/firstbox"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

        <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="16dp"
        android:layout_margin="5dp"
        android:textStyle="bold"
        android:text="@string/hint_location" />


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/location"/>
        </LinearLayout>
    <EditText
        android:id="@+id/et_location"
        android:layout_marginRight="18dp"
        android:layout_marginLeft="18dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:ems="15"
        android:gravity="right"
        android:inputType="textMultiLine"
        android:lines="4"
        android:textDirection="rtl"
        android:background="@drawable/edittexts"
        android:padding="10dp"
        android:fontFamily="@fonts/farroya.ttf"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginRight="18dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="15dp"
        android:gravity="right"
        android:text="@string/string_sample"
        android:textSize="14dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_location"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/whiteBlue"
        android:textStyle="bold"
        android:textSize="18dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/button"
        android:text="@string/string_verify"
        android:layout_gravity="center"
        android:fontFamily="@fonts/farroya.ttf"
        />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_cancels"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:textColor="@color/whiteBlue"
            android:textStyle="bold"
            android:textSize="18dp"
            android:background="@drawable/red_buttons"
            android:text="@string/string_cancel"
            android:layout_gravity="center"
            android:fontFamily="@fonts/farroya.ttf"
            />

    </LinearLayout>
</LinearLayout>